# tmuxpulse

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_CN.md
.github/workflows/: ci.yml  publish.yml  release.yml
src/: cli.rs  lib.rs  main.rs
src/config/: mod.rs  theme.rs
src/daemon/: mod.rs
src/mux/: mod.rs
src/mux/tmux/: control.rs  mod.rs  parser.rs
src/plugin/: mod.rs
src/state/: mod.rs
src/ui/: cards.rs  layout.rs  mod.rs  status.rs  tabs.rs
tests/: snapshots.rs
tests/snapshots/: snapshots__built_in_themes.snap  snapshots__default_config_toml.snap  snapshots__empty_snapshot_json.snap  snapshots__plugin_manifest_toml.snap  snapshots__session_json.snap
